# rust-feature-demo

./: README.md
apollo-example/spotify-api-example/: .gitignore  pom.xml
apollo-example/spotify-api-example/src/main/java/com/spotify/apollo/example/: AlbumResource.java  ArtistResource.java  DummyResource.java  SpotifyApiExample.java
apollo-example/spotify-api-example/src/main/resources/: spotify-api-example-service.conf
apollo-example/spotify-api-example/src/test/java/com/spotify/apollo/example/: DummyResourceTest.java
gid-to-uuid/: Cargo.toml
gid-to-uuid/src/: lib.rs
helloworld-tonic/: Cargo.toml
helloworld-tonic/proto/: helloworld.proto
helloworld-tonic/src/: server.rs
rust-http-example/: Cargo.toml
rust-http-example/src/: main.rs
rust-tide-example/: Cargo.toml
rust-tide-example/src/: main.rs
trackinfo-tonic/: Cargo.toml  build.rs
trackinfo-tonic/proto/: trackinfo.proto
trackinfo-tonic/proto/spotify/metadata/: metadata.proto
trackinfo-tonic/proto/spotify/metadata/v1beta1/: metadata.proto  service.proto
trackinfo-tonic/src/: server.rs
