[package]
name = "helloworld-tonic"
version = "0.1.0"
authors = ["Fuyang Liu <fuyangl@spotify.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

#[[bin]] # Bin to run the HelloWorld gRPC client
#name = "helloworld-client"
#path = "src/client.rs"

[dependencies]
tonic = { git = "https://github.com/hyperium/tonic", branch = "master"} # "0.1.0-beta.1"
prost = "0.6"
# prost-types = "0.6"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = { git = "https://github.com/hyperium/tonic", branch = "master"}