[package]
name = "rust-tide-example"
version = "0.1.0"
authors = ["Fuyang Liu <liufuyang@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.5.1"
async-std = { version = "1.0.1", features = ["unstable"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"

[dev-dependencies]
threadpool = "1.7.1"