[package]
name = "trackinfo-tonic"
version = "0.1.0"
authors = ["Fuyang Liu <liufuyang@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "trackinfo-server"
path = "src/server.rs"

[dependencies]
gid-to-uuid = { path = "../gid-to-uuid" }
tonic = { path = "../../tonic/tonic" }
prost = "0.6"
prost-types = "0.6"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.1.0"