[package]
name = "trackinfo-tonic"
version = "0.1.0"
authors = ["Fuyang Liu <liufuyang@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "trackinfo-server"
path = "src/server.rs"

[dependencies]
# gid-to-uuid = { path = "../gid-to-uuid" }
rb62 = { git = 'https://github.com/liufuyang/rb62.git' }
tonic = "0.4.1"
prost = "0.7.0"
prost-types = "0.7.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }

[build-dependencies]
tonic-build = "0.4.1"